packages/voice_engine/lib/src/voice_engine_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Initialize the Dart DL API and store the SendPort native handle for the engine
/// event push channel. Call once at startup with the pointer from
/// `NativeApi.initializeApiDLData`.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>()
external void ve_init(ffi.Pointer<ffi.Void> api_data, int send_port);

/// Load models, open the audio devices and start the engine from a JSON config
/// blob. Returns 0 on success; -1 bad config, -2 already open, -3 model/device
/// startup failure (an `error` event carries the detail).
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>()
external int ve_open(ffi.Pointer<ffi.Uint8> cfg_ptr, int cfg_len);

/// Queue a sentence (UTF-8) for synthesis + playback. Returns 0 if queued; -1 if
/// no engine is open or the text is not valid UTF-8.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>()
external int ve_speak(ffi.Pointer<ffi.Uint8> text_ptr, int text_len);

/// Begin a reply (an LLM turn): the remote backend opens one connection+session
/// for every following ve_speak until ve_speak_end. A no-op for the local backend.
/// Returns 0.
@ffi.Native<ffi.Int32 Function()>()
external int ve_speak_begin();

/// End the current reply, letting the remote backend finish and close its session.
/// A no-op for the local backend. Returns 0.
@ffi.Native<ffi.Int32 Function()>()
external int ve_speak_end();

/// Barge-in: discard queued/in-flight TTS and silence playback. Idempotent.
/// Returns 0.
@ffi.Native<ffi.Int32 Function()>()
external int ve_stop();

/// Wake the engine (run ASR) or put it back to sleep (wake-word only). Non-zero
/// `active` wakes, 0 sleeps. A no-op unless wake-gating was enabled at ve_open.
/// Returns 0.
@ffi.Native<ffi.Int32 Function(ffi.Int32)>()
external int ve_set_active(int active);

/// The current lip-sync mouth-opening level in [0, 1], derived from the RMS of the
/// TTS audio playing out right now (0.0 when nothing is playing or nothing is
/// open). A lock-free read; poll it once per Live2D render frame to drive a
/// LipSync parameter.
@ffi.Native<ffi.Float Function()>()
external double ve_speaking_level();

/// Stop the worker threads and close the audio devices. Idempotent. Returns 0.
@ffi.Native<ffi.Int32 Function()>()
external int ve_close();
